--- a/CPU.html
+++ b/CPU.html
@@ -103,6 +103,9 @@
             <div id="function_button5">
                 <input type="button" class="FunctionButton" id="Slow" value="S">
             </div>
+            <div id="function_button6">
+                <input type="button" class="FunctionButton" id="Next" value="N">
+            </div>
         </div>
     </body>
 </html>
